# Andorinha-Jobs

./: .gitignore  README.md  pyproject.toml
andorinha/: __init__.py  clock.py  logging.py  queue.py  storage.py
tests/: test_bootstrap.py  test_queue_leasing.py  test_storage_bootstrap.py
